Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82874

qdoc: DocBook generator cannot handle shared comment nodes

    XMLWordPrintable

Details

    • 8
    • dbc3ea8150aebe8b4964c533c2f6faecfc01f816 (qt/qttools/dev) 70ec38e5242e72b25c0df085b9e87acdbdc2e0d2 (qt/qttools/5.15)
    • Da Vinci sprint 11

    Description

      This is reflected in the tests:

      qt5/qttools/tests/auto/qdoc/generatedoutput/testdata/testcpp/testcpp.cpp:157: (qdoc) warning: Unknown node tag shared comment
      qt5/qttools/tests/auto/qdoc/generatedoutput/testdata/testcpp/testcpp.cpp:157: (qdoc) warning: Unexpected node type in generateDocBookSynopsis: shared comment
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes