qdoc: DocBook generator: Stop generating empty synopsis for shared nodes

Shared comment nodes must be skipped when generating DocBook synopsis
to avoid incorrect output and documentation warnings.

Fixes: QTBUG-82874
Change-Id: I8f9e4b0e921053dcd603a2f515eb59a6f42b4c84
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit dbc3ea8150aebe8b4964c533c2f6faecfc01f816)